# phantombuster

./: .readthedocs.yaml  Dockerfile  README.md  build.py  build.sh  pyproject.toml
docs/: requirements.txt
docs/source/: commands.rst  conf.py  files.rst  index.rst  installation.rst  quickstart.rst
example/data/: barcode_hierarchy.csv  category.csv  data.bam  grna_barcodes.csv  input_files.csv  regexes.csv  sample_barcodes.csv  thresholds.csv
scripts/: build_python3.10.sh  build_python3.11.sh  build_python3.12.sh  build_python3.9.sh
src/phantombuster/: __init__.py  analysis.py  bamindexer.py  cli.py  config_files.py  core.py  error_corrector.py  handler.py  io_.py  merge_cython.pyx  plumbing.py  porcelain.py  project.py  statistics.py  store.py  stores.py  vault.py
src/phantombuster/remoter/: async_.py  messages.py  scheduler.py  serialization.py  server.py  socket_.py  store.py  task.py  worker.py
test/: test_phantombuster.py
test/test_data_files/1010/: 1010.bam  copy.fastq  regexes.csv  sample_barcodes.csv
test/test_data_files/big/: 101.bam  104.bam  105.bam  106.bam  barcode_hierarchy.csv  categories.csv  input_files.csv  library_barcodes.csv  regexes.csv  sample_barcodes.csv  thresholds.csv
test/test_data_files/medium/: barcode_hierarchy.csv  input_files.csv  library_barcodes.csv  mafile.bam  regexes.csv
test/test_data_files/small/: barcode_hierarchy.csv  input_files.csv
test/test_data_files/small_fastq/: .remoter.sqlite3  barcode_hierarchy.csv  input_files.csv  regexes.csv
