[tool.poetry]
name = "phantombuster"
version = "0.15.0"
description = "Bioinformatical tool to remove sequencing artifacts originating from single-nucleotide errors and index hopping from barcode-based experiments"
authors = ["Simon Haendeler <simon.emanuel.haendeler@univie.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0"
pysam = "^0.22.0"
regex = "^2022.10.31"
pyarrow = "^15"
click = "^8.1.3"
zmq = "^0.0.0"
trio = "^0.22.0"
scipy = "^1.10.1"
polars = "^1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
pytest = "^7.2.0"
Cython = "^0.29.32"
cibuildwheel = "^2.12.0"

[tool.poetry.group.dev.dependencies]
auditwheel = "^5.3.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

sphinx-click = "^6.0.0"
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[build-system]
requires = ["poetry-core", "cython", "numpy", "pyarrow==15.0.2", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
phantombuster = 'phantombuster.cli:phantombuster'


